--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,10 @@
 		padding: 200px 0 100px 0;
 	}
 
+	.cc-mobile-img, .cc-phone-img-2 {
+		display: none;
+	}
+
 	/*.cc-hero-1 {
 		grid-column-start: 9;
 	}
@@ -494,10 +498,14 @@
 		grid-column-start: 12;
 	} */
 
-	.cc-phone-img {
+	/*.cc-phone-img {
 		display: block;
 		width: 231px;
 		height: 461px;
+	}*/
+
+	.cc-phone-img {
+		display: inline-flex;
 	}
 
 	/*.cc-hero-img {
@@ -509,9 +517,6 @@
 		width: 93%;
 	}*/
 
-	.cc-mobile-hero {
-		display: none;
-	}
 
 	.intro {
 		grid-column-start: 5;
@@ -730,6 +735,10 @@
 /* MEDIA QUERIES */
 
  	@media screen and (min-width: 1326px) {
+ 		h1 {
+ 			font-size: 48px;
+ 		}
+
  		.cc-app, .fs-app {
 			width: 474px;
 			height: 472px;
@@ -744,6 +753,25 @@
 		.cc-app, .fs-app {
 			width: 100%;
 			height: auto;
+		}
+
+		.cc-phone-img-2 {
+			display: block;
+		}
+
+		.cc-phone-img {
+			display: none;
+		}
+
+		.cc-hero-container {
+
+		}
+
+		.cc-hero-imgs {
+			grid-column-start: 10;
+			grid-column-end: 14;
+			display: flex;
+			padding: 200px 0 100px 0;
 		}
 
  	}
@@ -813,7 +841,8 @@
 		}
 
 		.ur-point-2, .ur-point-4 {
-			grid-column-start: 11;
+			grid-column-start: 9;
+			grid-column-end: span 7;
 		}
 
 		.intro, .user-research, .research-conclusion, .personas, .persona-left, 
@@ -877,6 +906,19 @@
 		}
 	}
 
+
+	@media screen and (max-width: 1024px) {
+
+
+			.cc-hero-imgs {
+				grid-column-start: 10;
+				grid-column-end: 14;
+				display: flex;
+				padding: 200px 0 100px 0;
+			}
+
+		}
+		
 	@media screen and (max-width: 768px) {
 		h1 {
 			font-size: 40px;
@@ -919,26 +961,13 @@
 		}
 
 		/* CC PAGE */
-
-		.cc-phone-img {
-			height: auto;
-			width: 100%;
-		}
-	}
-
-	@media screen and (max-width: 1120px) {
 		.cc-hero-imgs {
-			grid-column-start: 9;
-			grid-column-end: 14;
-		}
-
+grid-column-start: 4;
+grid-column-end: 14;
+flex-direction: column;
+}
 	}
 
-	@media screen and (max-width: 1024px) {
-		.cc-hero-hr {
-			font-size: 51px;
-		}
-	}
 
 	@media screen and (max-width: 660px) {
 		
@@ -991,27 +1020,6 @@
 			margin-top: 0;
 		}
 
-		/*.fs-ur-1, .fs-ur-2, .fs-ur-3 {
-			width: 90%;
-		}
-
-		.fs-ur-1 {
-			grid-column-start: 3;
-			grid-column-end: span 4;
-			margin-left: 5%;
-		}
-
-		.fs-ur-2 {
-			grid-column-start: 1;
-			grid-column-end: span 4;
-			margin-left: 9%;
-		}
-
-		.fs-ur-3 {
-			grid-column-start: 6;
-			grid-column-end: span 3;
-		}*/
-
 	}
 
 	@media screen and (max-width: 353px) {
@@ -1051,11 +1059,15 @@
 			grid-column-end: 16;
 		}
 
-		.cs-hero-container {			
-			grid-column-start: 2;						
-			grid-column-end: 16;						
-			padding-bottom: 60px;						
+		.cs-hero-container {
+			grid-column-start: 2;
+			grid-column-end: 16;
+			padding-bottom: 60px;
 			margin-top: 180px;
+		}
+
+		.stories {
+			display: none;
 		}
 
 		.intro-hr {
@@ -1080,6 +1092,12 @@
 			display: none;
 		}
 
+		.cc-mobile-img {
+			display: block;
+			grid-column-start: 4;
+			grid-column-end: 15;
+		}
+
 		/*PUT LOGO-HR HERE AFTER FIXING LOGO!*/
 		.cc-hero-img, .fs-hero-img-container, .flows {
 			display: none;
@@ -1094,9 +1112,10 @@
 			grid-column-end: span 14;
 		}
 
-		/*.cc-mobile-hero {
-			display: block;
-		}*/
+		.cc-hero-imgs {
+			display: none;
+		}
+
 
 		.cc-sketches, .cc-wireframe-img1, .cc-wireframe-img2, .two-img-a, 
 			.two-img-b, .test-img1, .test-img2, .test-img3 {
@@ -1106,11 +1125,11 @@
 		/* FOODSWITCH PAGE */
 		.fs-ur-1, .fs-ur-2, .fs-ur-3 {
 			
-grid-column-start: 2;
-			
-grid-column-end: span 13;
-			
-text-align: center;
+			grid-column-start: 2;
+						
+			grid-column-end: span 13;
+						
+			text-align: center;
 		}
 	}
 
@@ -1130,212 +1149,8 @@ text-align: center;
 		.fs-img {
 			margin-top: 16px;
 		}
-	}
 
-/*
-	@media screen and (min-width: 320px) {
-		.main-content, .connect {
-			grid-template-columns: 20px auto 20px;
-		}
-
-		.skills, .tools {
-			float: none;
-		}
-
-		.cc-app, .fs-app, .cc-case, .fs-case {
-			grid-column-start: 1;
-			grid-column-end: span 6;
-			margin-left: 24px;
-		}
-
-		.cc-case, .fs-case {
-			margin-top: 16px;
-			width: 100%;
-		}
-
-		.fs-app {
-			margin-top: 16px;
+		.cc-mobile-img {
+			grid-column-start: 3;
 		}
 	}
-
-	@media screen and (min-width: 535px) {
-		
-		.main-content, .connect {
-			grid-template-columns: 50px auto 50px;
-		}
-	}
-
-	@media screen and (min-width: 600px) {
-		.main-content, .connect {
-			grid-template-columns: 100px auto 100px;
-		}
-	}
-
-	@media screen and (min-width: 768px) {
-		.main-content {
-			grid-template-columns: 100px auto 80px;
-		}
-
-		.skills {
-			float: left;
-			margin-left: 36px;
-		}
-
-		.tools {
-			float: right;
-			margin-right: 36px;
-		}
-
-		.connect {
-			grid-template-columns: 200px auto 200px;
-		}
-
-		.cc-app, .fs-case {
-			grid-column-start: 1;
-			grid-column-end: span 3;
-		}
-
-		.cc-app {
-			margin-top: 72px;
-		}
-
-		.fs-case, .fs-app {
-			margin-top: 48px;
-			margin-bottom: 48px;
-		}
-
-		.cc-case, .fs-case {
-			width: 85%;
-		}
-
-		.cc-case, .fs-app {
-			grid-column-start: 5;
-			grid-column-end: span 3;  
-		}
-
-		.fs-app {
-			margin-top: 69px;
-		}
-
-		.cc-app, .fs-app {
-			width: 100%;
-			display: block;
-		}
-
-		.cc-case, .fs-app {
-			margin-left: 40px;
-		}
-
-		.cc-case, .fs-case {
-			margin-top: 90px;
-		}
-	}
-
-	@media screen and (min-width: 826px) {
-		.main-content {
-			grid-template-columns: 120px auto 120px;
-		}
-	}
-
-	@media screen and (min-width: 897px) {
-		.main-content {
-			grid-template-columns: 150px auto 150px;
-		}
-	}
-
-
-	@media screen and (min-width: 958px) {
-		.main-content {
-			grid-template-columns: 180px auto 180px;
-		}
-
-		.connect {
-			grid-template-columns: 290px auto 290px;
-		}
-	}
-
-	@media screen and (min-width: 975px) {
-		.connect {
-			grid-template-columns: 280px auto 280px;
-		}
-	}
-
-	@media screen and (min-width: 1024px) {
-
-		.cc-app, .fs-case {
-			grid-column-start: 2;
-			margin-left: 0px;
-		}
-
-		.cc-app, .fs-app {
-			width: 94%;
-		}
-
-		.cc-case {
-			margin-top: 75px;
-		}
-
-	}
-
-	@media screen and (min-width: 1056px) {
-		.connect {
-			grid-template-columns: 300px auto 300px;
-		}
-	}
-
-	@media screen and (min-width: 1145px) {
-		.main-content {
-			grid-template-columns: 290px auto 290px;
-		}
-
-		.cc-case {
-			margin-top: 100px;
-		}
-
-		.fs-case {
-			margin-top: 105px;
-		}
-	}
-
-	@media screen and (min-width: 1170px) {
-		.connect {
-			grid-template-columns: 350px auto 350px;
-		}
-	}
-
-	@media screen and (min-width: 1242px) {
-		.main-content {
-			grid-template-columns: 330px auto 330px;
-		}
-	}
-
-	@media screen and (min-width: 1269px) {
-		.connect {
-			grid-template-columns: auto 400px auto;
-		}
-	
-
-	@media screen and (min-width: 1280px) {
-
-		.cc-case, .fs-case {
-			margin-top: 140px;
-		}
-
-	}
-
-	@media screen and (min-width: 1400px) {
-		.cs-hero-container {
-			margin-top: 270px;
-		}
-
-		.cc-case, .fs-case {
-			margin-top: 160px;
-		}
-	
-
-	@media screen and (min-width: 1440px) {
-		.cc-case, .fs-case {
-			margin-top: 180px;
-		}
-	}
-*/
